# nixpkgs-overlay

./: .envrc  .gitignore  LICENSE  default.nix  flake.lock.license  flake.nix
.woodpecker/: check.yaml
VisiCut/: default.nix
afancontrol/: default.nix
aonsoku-web/: default.nix
apple-music-downloader/: default.nix
bandcamp-downloader/: default.nix  poetry-git-overlay.nix  pyproject.toml  update
bpm-tools/: default.nix
cap/: 0001-Load-assets-from-local-directory.patch  0002-Show-local-asset-in-integration-tab.patch  0003-Use-local-wasm-URL-in-widget.patch  0003-Use-local-wasm-URL-in-widget.patch.license  0004-Show-widget-import-as-module-in-dashboard.patch  0005-Resolve-IPDB-conflict-on-read-only-filesystem.patch  module.nix  src.nix  standalone.nix  versions.json  wasm.nix  widget.nix
colorchord2/: default.nix
cups-sii-slp-400-600/: default.nix  fix-includes.diff
cyanrip/: default.nix
deemix/: default.nix
dgpulldown/: default.nix  headers.patch  headers.patch.license
fSpy/: default.nix
face_morpher/: default.nix
fedifetcher/: default.nix
feishin-web/: default.nix
gamdl/: default.nix
gust_tools/: 0001-gust_ebm-fix-compiler-error-about-different-signs.patch  default.nix
haproxy-auth-request/: default.nix
haproxy-lua-cors/: default.nix
haproxy-lua-http/: default.nix
hcloud_exporter/: default.nix  module.nix
knst0-mdl/: default.nix
komf/: default.nix  module.nix
linuxmotehook2/: default.nix
liquidsfz/: default.nix
listenbrainz-content-resolver/: default.nix
luajson/: default.nix
mcaptcha/: cache.nix  default.nix  (+1 more)
(+48 files in other folders)
