[tool.poetry]
name = "bandcamp-downloader-env"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
bandcamp-downloader = {git = "https://github.com/easlice/bandcamp-downloader"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
